tests/Tree/negative/test013.jvt
-- calling unsupported anoma-sign

function main() : * {
  anoma-sign(1,2)
}
